--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dist/tickerpicker.js",
   "scripts": {
     "generate": "node csv/generate.js",
-    "test": "babel-tape-runner test/tickerpicker.spec.js"
+    "test": "babel-tape-runner test/tickerpicker-test.js",
+    "build": "rollup src/tickerpicker.js --output dist/tickerpicker.js --format cjs"
   },
   "repository": {
     "type": "git",
@@ -22,11 +23,10 @@
   ],
   "author": "andytompkins <andy.tompkins@gmail.com> (github.com/andytompkins)",
   "devDependencies": {
-    "csv": "^0.4.6"
-  },
-  "dependencies": {
     "babel-preset-es2015": "^6.22.0",
     "babel-tape-runner": "^2.0.1",
+    "csv": "^0.4.6",
+    "rollup": "^0.41.4",
     "tape": "^4.6.3"
   }
 }
