--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "devDependencies": {
     "babel-preset-es2015": "^6.22.0",
     "babel-tape-runner": "^2.0.1",
-    "csv": "^0.4.6",
+    "csvtojson": "^1.1.4",
     "rollup": "^0.41.4",
     "tape": "^4.6.3"
   }
